tests/errors/macro/parser_unexpected_endm.c
int a = 0;
#endm a = 1;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
